# php-deps-windows-arm64

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
